--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     padding: 10px;                       
     border-radius: 5px;                  
     text-transform: uppercase;            
-    text-align: center;                  
+    text-align: left;                  
 }
 
 
@@ -91,7 +91,7 @@
 .product-price {
     color: black;                  
     font-weight: bold;              
-    font-size: 22px;                 
+    font-size: 15px;                 
 }
 
 
@@ -114,7 +114,7 @@
         }
 
         .nav-arrow:hover {
-            background: #34e708;
+            background: #ddd;
         }
 
         .nav-arrow.left {
